force-app/main/default/objects/Deferral_Document__c/Deferral_Document__c.object-meta.xml
<CustomObject>
    <label>Deferral Document</label>
    <nameField>
        <displayFormat>Deferral - {0}</displayFormat>
        <label>Deferral Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deferral Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>