force-app/main/default/objects/Deferral_Document__c/fields/Applicable_For__c.field-meta.xml
<CustomField>
    <fullName>Applicable_For__c</fullName>
    <label>Applicable For</label>
    <length>255</length>
    <type>Text</type>
</CustomField>