force-app/main/default/objects/Deferral_Document__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Deferral Documents</relationshipLabel>
    <relationshipName>Deferral_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>