force-app/main/default/objects/Deferral_Document__c/fields/Deferral_Date__c.field-meta.xml
<CustomField>
    <fullName>Deferral_Date__c</fullName>
    <label>Deferral Date</label>
    <type>Date</type>
</CustomField>