force-app/main/default/objects/Deferral_Document__c/fields/Deferral_Stage__c.field-meta.xml
<CustomField>
    <fullName>Deferral_Stage__c</fullName>
    <label>Deferral Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Application_Stage_Global_Picklist</valueSetName>
    </valueSet>
</CustomField>