force-app/main/default/objects/Deferral_Document__c/fields/Deferred_From__c.field-meta.xml
<CustomField>
    <fullName>Deferred_From__c</fullName>
    <label>Deferred From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>