force-app/main/default/objects/Deferral_Document__c/fields/Document_Set_Code__c.field-meta.xml
<CustomField>
    <fullName>Document_Set_Code__c</fullName>
    <label>Document Set Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>