force-app/main/default/objects/Deferral_Document__c/fields/Is_Deferral_Document__c.field-meta.xml
<CustomField>
    <fullName>Is_Deferral_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deferral Document</label>
    <type>Checkbox</type>
</CustomField>