force-app/main/default/objects/Deferral_Document__c/fields/Is_Document_Received__c.field-meta.xml
<CustomField>
    <fullName>Is_Document_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Document Received</label>
    <type>Checkbox</type>
</CustomField>