force-app/main/default/objects/Deferral_Document__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Deferral Documents</relationshipLabel>
    <relationshipName>Deferral_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>