force-app/main/default/objects/Deferral_Document__c/fields/Waiver_Reason_c__c.field-meta.xml
<CustomField>
    <fullName>Waiver_Reason_c__c</fullName>
    <label>Waiver Reason</label>
    <type>TextArea</type>
</CustomField>